@@ -1,3 +1,6 @@
+2006-02-20 - johan
+Nearly complete implementation of vqt_xfntinfo.
+
 2006-02-18 - johan
 Added whole file caching system for FreeType2 engine.
 Made it possible to redirect debug output to a file.
